refactor(semantic-similarity): extract helpers, add charsPerToken config, expand strategy tests
- TextChunker: extract processSentence/appendSentenceToChunk/flushCurrentChunk/hardSplitOversizedSentence helpers; add charsPerToken overload for splitIntoChunks/estimateTokens/truncateToTokenLimit; switch Objects.requireNonNull to Spring Assert.notNull; mark class final
- SemanticSimilarityMetric: extract prepareTextsForStrategy and processEmbeddingResults; introduce step-name/index constants; use String.isBlank; add charsPerToken config field
- SemanticSimilarityExplanation: add Javadoc for all fields
- Tests: add TRUNCATE/FAIL_FAST strategy coverage, asymmetric-text chunking (response-only / reference-only), custom charsPerToken for Cyrillic; add Allure Epic/Feature/Story/Description annotations
- Bump spring-ai-starter-model-gigachat 1.1.1 -> 1.1.2

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>